# Object-detection-Tracking-using-yolo

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  config.py  main.py  push_output.txt  pyproject.toml  requirements.txt  setup.bat  setup.py  setup.sh  submission.py
